--- a/css/new-age.css
+++ b/css/new-age.css
@@ -155,7 +155,7 @@ header {
   /* fallback for old browsers */
   background: url("../img/bg-pattern.png"), -webkit-linear-gradient(to left, #7b4397, #dc2430);
   /* Chrome 10-25, Safari 5.1-6 */
-  background: url("../img/bg-pattern.png"), linear-gradient(to left, #7b4397, #dc2430);
+  background: url("../img/twohos.png"), linear-gradient(to left, #7b4397, #dc2430);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: white;
 }
@@ -206,6 +206,7 @@ header .device-container .screen img {
   }
   header .header-content .header-content-inner h1 {
     font-size: 35px;
+    font-family: 
   }
   header .device-container {
     max-width: none;
@@ -302,7 +303,7 @@ section.cta {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: url('../img/bg-cta.jpg');
+  background-image: url('../img/ppl.jpeg');
   padding: 250px 0;
 }
 section.cta .cta-content {
@@ -352,7 +353,7 @@ section.contact ul.list-social li a {
   color: white;
 }
 section.contact ul.list-social li.social-twitter a {
-  background-color: #1da1f2;
+  background-color: #dba211;
 }
 section.contact ul.list-social li.social-twitter a:hover {
   background-color: #0d95e8;
@@ -393,9 +394,9 @@ footer ul li a.active {
   text-decoration: none;
 }
 .bg-primary {
-  background: #fdcc52;
-  background: -webkit-linear-gradient(#fdcc52, #fdc539);
-  background: linear-gradient(#fdcc52, #fdc539);
+  background: #538947;
+  background: -webkit-linear-gradient(#538947, #538947);
+  background: linear-gradient(#538947, #4a5448);
 }
 .text-primary {
   color: #fdcc52;
