slight changes to padding
asdf

--- a/css/new-age.css
+++ b/css/new-age.css
@@ -206,7 +206,6 @@ header .device-container .screen img {
   }
   header .header-content .header-content-inner h1 {
     font-size: 35px;
-    font-family: 
   }
   header .device-container {
     max-width: none;
@@ -228,6 +227,7 @@ section h2 {
 section.download {
   padding: 150px 0;
   position: relative;
+    font-family: "Proxima Nova"
 }
 section.download h2 {
   margin-top: 0;
@@ -279,6 +279,7 @@ section.features .device-container {
 section.features .feature-item {
   text-align: center;
   margin-bottom: 100px;
+    padding-top: 70px;
 }
 section.features .feature-item h3 {
   font-size: 30px;
